<resources>
    <string name="app_name">Motorsport</string>
    <string name="logo">strTeamBadge</string>
    <string name="title">title</string>
    <string name="Position">pos</string>
    <string name="NOdata">No Data Available</string>
    <string name="Otherteamnames">Other Name</string>
    <string name="managerName">Manager Name:</string>
    <string name="year">intFormedYear</string>
    <string name="weblink">Web site:</string>
    <string name="tap_on_the_link_to_get_news">Tap to get News</string>
    <string name="adding_fav">Add Favorites</string>
    <string name="Data">data</string>
    <string name="fav">Favorite</string>
    <string name="myString">My string</string>
    <string name="teamurl">teamURL</string>
    <string name="NoFavorites">No Favorites To Display</string>
    <string name="Loading">Loading Data</string>
    <string name="teams">teams</string>
    <string name="teamName">strTeam</string>
    <string name="teamId">idTeam</string>
    <string name="shortName">strTeamShort</string>
    <string name="altName">strAlternate</string>
    <string name="manager">strManager</string>
    <string name="website">strWebsite</string>
    <string name="Description">strDescriptionEN</string>
    <string name="country">strCountry</string>
    <string name="description">Description:</string>
    <string name="Nation">Nation:</string>
    <string name="FOrmedyear">Year:</string>
    <string name="Swipe">Swipe Horizantal</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="NoFavourites">No Favorites to display</string>
    <string name="leagues">leagues</string>
    <string name="idLeague">idLeague</string>
    <string name="strLeague">strLeague</string>
    <string name="strSport">strSport</string>
    <string name="strLeagueAlternate">strLeagueAlternate</string>
    <string name="Motorsport">Motorsport</string>
    <string name="username_emailid">Username/Emailid</string>
    <string name="password">Password</string>
    <string name="signin">Signin</string>
    <string name="signup">Signup</string>
    <string name="login">LOGIN</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Don\'t have an account? Sign up</string>
    <string name="btn_link_to_login">already registered. login me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="logout">Logout</string>
    <string name="Addtofav">Added to Favorites</string>
    <string name="remfromfav">Removed from Favorites</string>
    <string name="msgone">In Favourites,Click on menu to add from Favourites</string>
    <string name="msg2">Click to remove from Favorites</string>
    <string name="msg3">Loading Data</string>
    <string name="enteremail">Enter email address!</string>
    <string name="enterpassword">Enter password!</string>
    <string name="msg4">Enter your registered email id</string>
    <string name="msg5">We have sent you instructions to reset your password!</string>
    <string name="msg6">Failed to send reset email!</string>
    <string name="msg7">No interent connection</string>
    <string name="msg8">Password too short, enter minimum 6 characters!</string>
    <string name="msg9">createUserWithEmail:onComplete:</string>
    <string name="msg10">Authentication failed.</string>
    <string name="msg11">Enter your registered email id</string>
    <string name="msg12">We have sent you instructions to reset your password!</string>
    <string name="msg13">Failed to send reset email!</string>
    <string name="fkjg">Login</string>
    <string name="msg20">Team Logo</string>
    <string name="ad">advertisement</string>
    <string name="favourite">Favourite</string>
    <string name="display_favorites">Display Favorites</string>
</resources>
