<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/display_favorites"
        android:id="@+id/favor"
        app:showAsAction="always"
        />
</menu>