<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Participants">
    <android.support.v7.widget.RecyclerView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/recyclerparticipants">

    </android.support.v7.widget.RecyclerView>
</GridLayout>